# paddock

./: .gitignore  CLAUDE.md  PLAN.md  README.md  SPEC.md  pyproject.toml
src/paddock/: __init__.py  cli.py  config.py  container.py  docker.py  paths.py  resolver.py  ssh.py
src/paddock/image/: Dockerfile  entrypoint.sh  sshd_config
tests/: conftest.py  test_config.py  test_container.py  test_resolver.py  test_ssh.py
