[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paddock"
version = "1.0"
description = "Build, start, stop, and remove a general-purpose agent container, attached to with herdr."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.25.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
paddock = "paddock.cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "ty>=0.0.1a1"]

[tool.uv]
# Ignore packages published in the last two weeks, giving newly published (and
# potentially compromised) releases time to be caught before we pull them in.
# This is a rolling window, evaluated relative to each resolution.
exclude-newer = "2 weeks ago"

[tool.hatch.build.targets.wheel]
packages = ["src/paddock"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
